--- a/socialapp/templates/socialapp/post_edit.html
+++ b/socialapp/templates/socialapp/post_edit.html
@@ -5,19 +5,18 @@
 <div class="container">
     <div class="row mt-3">
         <div class="col-md-5 col-sm-6">
-            <a href="{% url 'post_list' %}" class="btn"><i class="fa-solid fa-arrow-left fa-lg"></i></a>
+            <a href="{% url 'post_detail' object.pk %}" class="btn"><i class="fa-solid fa-arrow-left fa-lg"></i></a>
         </div>
     </div>
 
     <div class="row justify-content-center mt-3">
         <div class="col-md-5 col-sm-12 border-bottom">
-            <p><strong>{{ post.author }}</strong> {{ post.created_at }}</p>
-            <p>{{ post.content }}</p>
+            <h5>Update Post</h5>
         </div>
     </div>
 
     <div class="row justify-content-center mt-3 mb-5">
-        <div class="col-md-5 col-sm-12 ">
+        <div class="col-md-5 col-sm-12 border-bottom">
             <form method="POST">
                 {% csrf_token %}
                 {{ form | crispy }}
@@ -26,7 +25,6 @@
                 </div>
             </form>
         </div>
-    </div> 
-
+    </div>
 </div>
 {% endblock content %}
