--- a/socialapp/templates/socialapp/post_list.html
+++ b/socialapp/templates/socialapp/post_list.html
@@ -24,9 +24,12 @@
     {% for post in post_list %}
     <div class="row justify-content-center mt-3">
         <div class="col-md-5 col-sm-12 border-bottom position-relative">
-            <p><strong>{{ post.author }}</strong> {{ post.created_at }}</p>
-            <p>{{ post.content }}</p>
-            <a href="{% url 'post_detail' post.pk %}" class="stretched-link"> <a/>
+            <p><a style="text-decoration:none" class= "text-primary" href = "{% url 'profile' post.author.profile.pk %}"
+                >@{{ post.author }}</a> {{ post.created_at }}</p>
+             <div class="position-relative">   
+                <p>{{ post.content }}</p>
+                <a href="{% url 'post_detail' post.pk %}" class="stretched-link"> <a/>
+            </div>
         </div>
     </div>
     {% endfor %}
