--- a/socialapp/templates/socialapp/profile.html
+++ b/socialapp/templates/socialapp/profile.html
@@ -1,5 +1,4 @@
 {% extends 'landing/base.html' %}
-{% load static %}
 
 {% block content %}
 <div class="container">
@@ -11,7 +10,7 @@
 
     <div class="row justify-content-center mt-3">
         <div class="card shadow-sm col-md-8 col-sm-12 border-bottom px-5 pt-3">
-            <img src="{{ profile.picture.url }}" class="rounded-circle" width="100" height="100" />
+            <img src="{{ profile.picture.url }}" class="rounded" width="100" height="100" />
            
             {% if profile.name %}
             <h3 class="py-4">{{ profile.name }}
