--- a/landing/templates/landing/nav.html
+++ b/landing/templates/landing/nav.html
@@ -23,7 +23,8 @@
 
       <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0"></ul>
-        <form class="d-flex">
+        
+        <form class="d-flex" method = "GET" action="{% url 'profile_search' %}">
           <div class="input-group">
             <span class="input-group-text" id="basic-addon1">@</span>
             <input
@@ -32,9 +33,15 @@
               placeholder="Username"
               aria-label="Username"
               aria-describedby="basic-addon1"
+              name = "query"
+              value = "{{request.GET.query}}"
             />
+            <button style="border:none; background-color:transparent; box-shadow: none" type="submit">
+              <i class="fas fa-search"></i>
+            </button>
           </div>
         </form>
+
         {% if user.is_authenticated %}
         <div class="nav-item dropdown">
           <a
