--- a/landing/templates/landing/base.html
+++ b/landing/templates/landing/base.html
@@ -1,3 +1,5 @@
+{% load static %}
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -17,6 +19,8 @@
       integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1"
       crossorigin="anonymous"
     />
+
+    <link rel="stylesheet" href="{% static 'style.css' %}" />
 
     <title>SMedia</title>
   </head>
