--- a/landing/templates/landing/nav.html
+++ b/landing/templates/landing/nav.html
@@ -36,7 +36,7 @@
               name = "query"
               value = "{{request.GET.query}}"
             />
-            <button style="border:none; background-color:transparent; box-shadow: none" type="submit">
+            <button class="remove-default-btn" type="submit">
               <i class="fas fa-search"></i>
             </button>
           </div>
