--- a/socialapp/templates/socialapp/post_list.html
+++ b/socialapp/templates/socialapp/post_list.html
@@ -24,7 +24,7 @@
     {% for post in post_list %}
     <div class="row justify-content-center mt-3">
         <div class="col-md-5 col-sm-12 border-bottom position-relative">
-            <p><a style="text-decoration:none" class= "text-primary" href = "{% url 'profile' post.author.profile.pk %}"
+            <p><a class= "text-primary post-link" href = "{% url 'profile' post.author.profile.pk %}"
                 >@{{ post.author }}</a> {{ post.created_at }}</p>
              <div class="position-relative">   
                 <p>{{ post.content }}</p>
@@ -36,7 +36,7 @@
                 <form method="POST" action="{% url 'like' post.pk %}">
                     {% csrf_token %}
                     <input type="hidden" name="next" value="{{ request.path }}">
-                    <button style="background-color: transparent; border: none; box-shadow: none;" type="submit">
+                    <button class = "remove-default-btn" type="submit">
                         <i class="far fa-thumbs-up"> <span>{{ post.likes.all.count }}</span></i>
                     </button>
                 </form>
@@ -44,7 +44,7 @@
                 <form method="POST" action="{% url 'dislike' post.pk %}">
                     {% csrf_token %}
                     <input type="hidden" name="next" value="{{ request.path }}">
-                    <button style="background-color: transparent; border: none; box-shadow: none;" type="submit">
+                    <button class="remove-default-btn" type="submit">
                         <i class="far fa-thumbs-down"> <span>{{ post.dislikes.all.count }}</span></i>
                     </button>
                 </form>
