--- a/socialapp/templates/socialapp/profile.html
+++ b/socialapp/templates/socialapp/profile.html
@@ -16,14 +16,14 @@
             <h3 class="py-4">{{ profile.name }}
                 <span>
                     {% if request.user == user %}
-                        <a href="{% url 'profile_edit' profile.pk %}" style="color: #333"><i class="far fa-edit"></i></a>
+                        <a href="{% url 'profile_edit' profile.pk %}" class="edit-color"><i class="far fa-edit"></i></a>
                     {% endif %}
                 </span>
                 {% else %}
                 <h3 class="py-4">{{ user.username }}
                     <span>
                         {% if request.user == user %}
-                            <a href="{% url 'profile_edit' profile.pk %}" style="color: #333"><i class="far fa-edit"></i></a>
+                            <a href="{% url 'profile_edit' profile.pk %}" class="edit-color"><i class="far fa-edit"></i></a>
                         {% endif %}
                     </span>
                 </h3>
@@ -66,11 +66,29 @@
     {% for post in posts %}
     <div class="row justify-content-center mt-5">
         <div class="col-md-8 col-sm-12 border-bottom">
-            <p><a style="text-decoration:none" class= "text-primary" href = "{% url 'profile' post.author.profile.pk %}"
+            <p><a class= "text-primary post-link" href = "{% url 'profile' post.author.profile.pk %}"
                 >@{{ post.author }} </a> {{ post.created_at }}</p>
              <div class="position-relative">   
                 <p>{{ post.content }}</p>
                 <a href="{% url 'post_detail' post.pk %}" class="stretched-link"> <a/>
+            </div>
+            
+            <div class="d-flex flex-row">
+                <form method="POST" action="{% url 'like' post.pk %}">
+                    {% csrf_token %}
+                    <input type="hidden" name="next" value="{{ request.path }}">
+                    <button class="remove-default-btn" type="submit">
+                        <i class="far fa-thumbs-up"> <span>{{ post.likes.all.count }}</span></i>
+                    </button>
+                </form>
+
+                <form method="POST" action="{% url 'dislike' post.pk %}">
+                    {% csrf_token %}
+                    <input type="hidden" name="next" value="{{ request.path }}">
+                    <button class="remove-default-btn" type="submit">
+                        <i class="far fa-thumbs-down"> <span>{{ post.dislikes.all.count }}</span></i>
+                    </button>
+                </form>
             </div>            
         </div>
     </div>
