--- a/socialapp/templates/socialapp/comment_delete.html
+++ b/socialapp/templates/socialapp/comment_delete.html
@@ -4,7 +4,7 @@
 <div class="container">
     <div class="row mt-3">
         <div class="col-md-5 col-sm-6">
-            <a href="{% url 'post_detail' object.pk %}" class="btn"><i class="fa-solid fa-arrow-left fa-lg"></i></a>
+            <a href="{% url 'post_detail' object.post.pk %}" class="btn"><i class="fa-solid fa-arrow-left fa-lg"></i></a>
         </div>
     </div>
 
