--- a/socialapp/templates/socialapp/post_detail.html
+++ b/socialapp/templates/socialapp/post_detail.html
@@ -12,13 +12,21 @@
     <div class="row justify-content-center mt-3">
         <div class="col-md-5 col-sm-12 border-bottom">
             <p>
-                <strong>{{ post.author }}</strong> {{ post.created_at }}
+                <div>
+                    <a href="{% url 'profile' post.author.profile.pk %}">
+                    <img class="rounded-circle post-img" src="{{ post.author.profile.picture.url }}" alt="profile image" width="30" height="30" />
+                    </a>
+                    <p class= "post-text">
+                          <a class= "text-primary post-link" href = "{% url 'profile' post.author.profile.pk %}"
+                        >@{{ post.author }}</a> {{ post.created_at }}
+                    </p>
+                </div>
                 {% comment %} only the user who posted can edit logic {% endcomment %}
                 {% if request.user == post.author%}
                     <a href="{% url 'post_edit' post.pk %}" class="btn" class="edit-color"><i class="fa-regular fa-pen-to-square"></i></a>
                     <a href="{% url 'post_delete' post.pk %}" class="btn" class="edit-color"><i class="fa-solid fa-trash"></i></a>
                 {% endif %}
-            </p>
+
             <p>{{ post.content }}</p>
 
             <div class="d-flex flex-row">
@@ -57,7 +65,15 @@
     <div class="row justify-content-center mt-3 mb-5 ">
         <div class="col-md-5 col-sm-12 border-bottom">
             <p>
-                <strong>{{ comment.author }}</strong> {{ comment.created_at }}
+                <div>
+                    <a href="{% url 'profile' comment.author.profile.pk %}">
+                    <img class="rounded-circle post-img" src="{{ comment.author.profile.picture.url }}" alt="profile image" width="30" height="30" />
+                    </a>
+                    <p class= "post-text">
+                        <a class= "text-primary post-link" href = "{% url 'profile' comment.author.profile.pk %}"
+                    >@{{ comment.author }}</a> {{ comment.created_at }}
+                </p>
+                </div>
                    {% comment %} only the user who commented can edit logic {% endcomment %}
                    {% if request.user == comment.author%}
                    <a href="{% url 'comment_edit' post.pk comment.pk %}" class="btn"><i class="fa-regular fa-pen-to-square"></i></a>
