--- a/socialapp/templates/socialapp/post_list.html
+++ b/socialapp/templates/socialapp/post_list.html
@@ -24,8 +24,15 @@
     {% for post in post_list %}
     <div class="row justify-content-center mt-3">
         <div class="col-md-5 col-sm-12 border-bottom position-relative">
-            <p><a class= "text-primary post-link" href = "{% url 'profile' post.author.profile.pk %}"
-                >@{{ post.author }}</a> {{ post.created_at }}</p>
+            <div>
+                <a href="{% url 'profile' post.author.profile.pk %}">
+                <img class="rounded-circle post-img" src="{{ post.author.profile.picture.url }}" alt="profile image" width="30" height="30" />
+                </a>
+                <p class= "post-text">
+                    <a class= "text-primary post-link" href = "{% url 'profile' post.author.profile.pk %}"
+                >@{{ post.author }}</a> {{ post.created_at }}
+            </p>
+            </div>
              <div class="position-relative">   
                 <p>{{ post.content }}</p>
                 <a href="{% url 'post_detail' post.pk %}" class="stretched-link"> <a/>
