--- a/socialapp/templates/socialapp/search.html
+++ b/socialapp/templates/socialapp/search.html
@@ -11,6 +11,15 @@
     {% for profile in profile_list %}
         <div class="row justify-content-center mt-3">
             <div class="col-md-5 col-sm-12 border-bottom position-relative">
+                <div>
+                    <a href="{% url 'profile' profile.pk %}">
+                    <img class="rounded-circle post-img" src="{{ profile.picture.url }}" alt="profile image" width="30" height="30" />
+                    </a>
+                    <p class= "post-text">
+                        <a class= "text-primary post-link" href = "{% url 'profile' profile.pk %}"
+                    >@{{ profile.user }}</a> 
+                </p>
+                </div>
                 <p><a class="text-primary post-link" href="{% url 'profile' profile.pk %}">@{{ profile.user }}</a></p>
                 {% if profile.address %}
                     <p>{{ profile.address }}</p>
