--- a/landing/templates/landing/nav.html
+++ b/landing/templates/landing/nav.html
@@ -52,7 +52,7 @@
             ><i class="fas fa-user"></i
           ></a>
           <ul class="dropdown-menu">
-            <li><a class="dropdown-item" href="{% url 'profile' user.profile.pk %}">Profile</a></li>
+            <li><a class="dropdown-item" href="{% url 'profile' request.user.profile.pk %}">Profile</a></li>
             <li>
               <a class="dropdown-item" href="{% url 'account_logout' %}"
                 >Sign Out</a
