--- a/socialapp/templates/socialapp/profile.html
+++ b/socialapp/templates/socialapp/profile.html
@@ -10,33 +10,29 @@
 
     <div class="row justify-content-center mt-3">
         <div class="card shadow-sm col-md-8 col-sm-12 border-bottom px-5 pt-3">
-            <img src="{{ profile.picture.url }}" class="rounded" width="100" height="100" />
-           
-            {% if profile.name %}
-            <h3 class="py-4">{{ profile.name }}
-                <span>
-                    {% if request.user == user %}
-                        <a href="{% url 'profile_edit' profile.pk %}" class="edit-color"><i class="far fa-edit"></i></a>
-                    {% endif %}
-                </span>
-                {% else %}
-                <h3 class="py-4">{{ user.username }}
+            <div class=" text-center ">
+
+          
+                <img src="{{ profile.picture.url }}" class="rounded" width="100" height="100" />
+            
+                {% if profile.name %}
+                <h3 class="py-4">{{ profile.name }}
                     <span>
                         {% if request.user == user %}
                             <a href="{% url 'profile_edit' profile.pk %}" class="edit-color"><i class="far fa-edit"></i></a>
                         {% endif %}
                     </span>
+                    {% else %}
+                    <h3 class="py-4">{{ user.username }}
+                        <span>
+                            {% if request.user == user %}
+                                <a href="{% url 'profile_edit' profile.pk %}" class="edit-color"><i class="far fa-edit"></i></a>
+                            {% endif %}
+                        </span>
+                    </h3>
+                    {% endif %}
                 </h3>
-                {% endif %}
-            </h3>
-
-            {% if profile.address %}
-            <p>{{ profile.address }}</p>
-            {% endif %}
-
-            {% if profile.birth_date %}
-            <p>{{ profile.birth_date }}</p>
-            {% endif %}
+            </div>
 
             {% if profile.bio %}
             <p>{{ profile.bio }}</p>
@@ -44,22 +40,36 @@
 
             {% comment %} followers template {% endcomment %}
             <div class="mb-3">
-                <p>Followers: {{ number_of_followers }}</p>
-                {% if user == request.user %}
-                {% else %}
-                {% if is_following %}
-                <form method="POST" action="{% url 'remove_follower' profile.pk %}">
-                    {% csrf_token %}
-                    <button class="btn btn-outline-danger" type="submit">Unfollow</button>
-                </form>
-                {% else %}
-                <form method="POST" action="{% url 'add_follower' profile.pk %}">
-                    {% csrf_token %}
-                    <button class="btn btn-outline-success" type="submit">Follow</button>
-                </form>
-                {% endif %}
-                {% endif %}
+                <a href="{% url 'list_followers' profile.pk %}" class= "post-link"> Followers: {{ number_of_followers }}</a>
             </div>
+        </div>
+    </div>
+
+    <div class="row justify-content-center mt-3">
+        <div class="card shadow-sm col-md-8 col-sm-12 border-bottom px-5 py-3">
+            {% if profile.address %}
+            <p> Location: {{ profile.address }}</p>
+            {% endif %}
+
+            {% if profile.birth_date %}
+            <p>Birthday: {{ profile.birth_date }}</p>
+            {% endif %}
+
+            {% if user == request.user %}
+            {% else %}
+
+                {% if is_following %}
+                    <form method="POST" action="{% url 'remove_follower' profile.pk %}">
+                        {% csrf_token %}
+                        <button class="btn btn-outline-danger" type="submit">Unfollow</button>
+                    </form>
+                {% else %}
+                    <form method="POST" action="{% url 'add_follower' profile.pk %}">
+                        {% csrf_token %}
+                        <button class="btn btn-outline-success" type="submit">Follow</button>
+                    </form>
+                {% endif %}
+            {% endif %}
         </div>
     </div>
 
