--- a/socialapp/templates/socialapp/post_detail.html
+++ b/socialapp/templates/socialapp/post_detail.html
@@ -1,5 +1,6 @@
 {% extends 'landing/base.html' %}
 {% load crispy_forms_tags %}
+{% load static %}
 
 {% block content %}
 <div class="container">
@@ -11,10 +12,9 @@
 
     <div class="row justify-content-center mt-3">
         <div class="col-md-5 col-sm-12 border-bottom">
-            <p>
                 <div>
                     <a href="{% url 'profile' post.author.profile.pk %}">
-                    <img class="rounded-circle post-img" src="{{ post.author.profile.picture.url }}" alt="profile image" width="30" height="30" />
+                        <img class="rounded-circle post-img" src="{{ post.author.profile.picture.url }}" alt="profile image" width="30" height="30" />
                     </a>
                     <p class= "post-text">
                           <a class= "text-primary post-link" href = "{% url 'profile' post.author.profile.pk %}"
@@ -62,17 +62,18 @@
     </div> 
 
     {% for comment in comments %}
+    {% if comment.is_parent %}
     <div class="row justify-content-center mt-3 mb-5 ">
         <div class="col-md-5 col-sm-12 border-bottom">
             <p>
                 <div>
                     <a href="{% url 'profile' comment.author.profile.pk %}">
-                    <img class="rounded-circle post-img" src="{{ comment.author.profile.picture.url }}" alt="profile image" width="30" height="30" />
+                        <img class="rounded-circle post-img" src="{{ comment.author.profile.picture.url }}" alt="profile image" width="30" height="30" />
                     </a>
                     <p class= "post-text">
                         <a class= "text-primary post-link" href = "{% url 'profile' comment.author.profile.pk %}"
                     >@{{ comment.author }}</a> {{ comment.created_at }}
-                </p>
+                    </p>
                 </div>
                    {% comment %} only the user who commented can edit logic {% endcomment %}
                    {% if request.user == comment.author%}
@@ -81,8 +82,69 @@
                {% endif %}
             </p>
             <p>{{ comment.content }}</p>
+            
+            <div class="d-flex flex-row">
+                <form method="POST" action="{% url 'comment_like' post.pk comment.pk %}">
+                    {% csrf_token %}
+                    <input type="hidden" name="next" value="{{ request.path }}">
+                    <button class="remove-default-btn" type="submit">
+                        <i class="far fa-thumbs-up"> <span>{{ comment.likes.all.count }}</span></i>
+                    </button>
+                </form>
+
+                <form method="POST" action="{% url 'comment_dislike' post.pk comment.pk %}">
+                    {% csrf_token %}
+                    <input type="hidden" name="next" value="{{ request.path }}">
+                    <button class="remove-default-btn" type="submit">
+                        <i class="far fa-thumbs-down"> <span>{{ comment.dislikes.all.count }}</span></i>
+                    </button>
+                </form>
+                    <div> 
+                        <button class="remove-default-btn"> 
+                            <i class="far fa-comment-dots" onclick="commentReplyToggle('{{ comment.pk }}')"> </i>
+                        </button>
+                    </div>
+                
+            </div>
+        </div>
+    </div>
+
+    <div class="row justify-content-center mt-3 mb-5 d-none" id = "{{ comment.pk }}">
+        <div class="col-md-5 col-sm-12 ">
+            <form method="POST" action = "{% url 'comment_reply' post.pk comment.pk%}">
+                {% csrf_token %}
+                {{ form | crispy }}
+                <div class="d-grid gap-2">
+                    <button class="btn btn-success mt-3">Submit!</button>
+                </div>
+            </form>
+        </div>
+    </div> 
+
+    {% for child_comment in comment.children %}
+    <div class="row justify-content-center mt-3 mb-5" style="margin-left: 4rem;">
+        <div class="col-md-5 col-sm-12 border-bottom">
+            <p>
+                <div>
+                    <a href="{% url 'profile' child_comment.author.profile.pk %}">
+                        <img class="round-circle post-img" height="30" width="30" src="{{ child_comment.author.profile.picture.url }}" />
+                    </a>
+                    <p class="post-text">
+                        <a class="text-primary post-link" href="{% url 'profile' child_comment.author.profile.pk %}">@{{ child_comment.author }}</a> {{ child_comment.created_on }}
+                    </p>
+                </div>
+                {% if request.user == child_comment.author %}
+                <a href="{% url 'comment_edit' post.pk child_comment.pk %}" class="btn"><i class="fa-regular fa-pen-to-square"></i></a>
+                <a href="{% url 'comment_delete' post.pk child_comment.pk %}" class="btn"><i class="fa-solid fa-trash"></i></a>
+                {% endif %}
+            </p>
+            <p>{{ child_comment.content }}</p>
         </div>
     </div>
     {% endfor %}
+    {% endif %}
+    {% endfor %}
 </div>
+
+<script type="text/javascript" src="{% static 'js/social.js' %}">
 {% endblock content %}
