--- a/landing/templates/landing/nav.html
+++ b/landing/templates/landing/nav.html
@@ -1,3 +1,4 @@
+{% load custom_tags %}
 <div class="container">
   <nav class="navbar navbar-expand-lg navbar-light">
     <div class="container-fluid">
@@ -59,6 +60,9 @@
               >
             </li>
           </ul>
+        </div>
+        <div class="nav-item">
+          {% show_notifications %}
         </div>
         {% endif %}
       </div>
