--- a/socialapp/templates/socialapp/post_detail.html
+++ b/socialapp/templates/socialapp/post_detail.html
@@ -14,7 +14,7 @@
         <div class="col-md-5 col-sm-12 border-bottom">
                 <div>
                     <a href="{% url 'profile' post.author.profile.pk %}">
-                        <img class="rounded-circle post-img" src="{{ post.author.profile.picture.url }}" alt="profile image" width="30" height="30" />
+                        <img class="rounded-circle post-img" src="{{ post.author.profile.profile_pic.url }}" alt="profile image" width="30" height="30" />
                     </a>
                     <p class= "post-text">
                           <a class= "text-primary post-link" href = "{% url 'profile' post.author.profile.pk %}"
@@ -68,7 +68,7 @@
             <p>
                 <div>
                     <a href="{% url 'profile' comment.author.profile.pk %}">
-                        <img class="rounded-circle post-img" src="{{ comment.author.profile.picture.url }}" alt="profile image" width="30" height="30" />
+                        <img class="rounded-circle post-img" src="{{ comment.author.profile.profile_pic.url }}" alt="profile image" width="30" height="30" />
                     </a>
                     <p class= "post-text">
                         <a class= "text-primary post-link" href = "{% url 'profile' comment.author.profile.pk %}"
@@ -127,7 +127,7 @@
             <p>
                 <div>
                     <a href="{% url 'profile' child_comment.author.profile.pk %}">
-                        <img class="round-circle post-img" height="30" width="30" src="{{ child_comment.author.profile.picture.url }}" />
+                        <img class="round-circle post-img" height="30" width="30" src="{{ child_comment.author.profile.profile_pic.url }}" />
                     </a>
                     <p class="post-text">
                         <a class="text-primary post-link" href="{% url 'profile' child_comment.author.profile.pk %}">@{{ child_comment.author }}</a> {{ child_comment.created_on }}
