--- a/socialapp/templates/socialapp/post_edit.html
+++ b/socialapp/templates/socialapp/post_edit.html
@@ -17,7 +17,7 @@
 
     <div class="row justify-content-center mt-3 mb-5">
         <div class="col-md-5 col-sm-12 border-bottom">
-            <form method="POST">
+            <form method="POST" enctype="multipart/form-data">
                 {% csrf_token %}
                 {{ form | crispy }}
                 <div class="d-grid gap-2">
