--- a/socialapp/templates/socialapp/post_list.html
+++ b/socialapp/templates/socialapp/post_list.html
@@ -11,7 +11,8 @@
 
     <div class="row justify-content-center mt-3 mb-5">
         <div class="col-md-5 col-sm-12 border-bottom">
-            <form method="POST">
+            <form method="POST" enctype="multipart/form-data"> 
+                 {% comment %} enctype is for uploading files {% endcomment %}
                 {% csrf_token %}
                 {{ form | crispy }}
                 <div class="d-grid gap-2">
@@ -26,14 +27,18 @@
         <div class="col-md-5 col-sm-12 border-bottom position-relative">
             <div>
                 <a href="{% url 'profile' post.author.profile.pk %}">
-                <img class="rounded-circle post-img" src="{{ post.author.profile.picture.url }}" alt="profile image" width="30" height="30" />
+                <img class="rounded-circle post-img" src="{{ post.author.profile.profile_pic.url }}" alt="profile image" width="30" height="30" />
                 </a>
                 <p class= "post-text">
                     <a class= "text-primary post-link" href = "{% url 'profile' post.author.profile.pk %}"
                 >@{{ post.author }}</a> {{ post.created_at }}
             </p>
             </div>
-             <div class="position-relative">   
+             <div class="position-relative">
+                {% if post.image %}
+                    <img class="post-image" src="{{ post.image.url }}" alt="post image" />
+                {% endif %}
+                
                 <p>{{ post.content }}</p>
                 <a href="{% url 'post_detail' post.pk %}" class="stretched-link"> <a/>
             </div>
