Added: Inbox Feature Tofix: Thread error

--- a/landing/templates/landing/nav.html
+++ b/landing/templates/landing/nav.html
@@ -61,6 +61,13 @@
             </li>
           </ul>
         </div>
+        
+        <div class="nav-item inbox-icon-container">
+          <a class="inbox-icon" href="{% url 'inbox' %}"
+            ><i class="fa-solid fa-inbox"></i
+          ></a>
+        </div>
+
         <div class="nav-item">
           {% show_notifications %}
         </div>
