--- a/static/style.css
+++ b/static/style.css
@@ -93,3 +93,17 @@
 	transition: 0.3s;
 	cursor: pointer;
 }
+
+.inbox-item-container{
+	margin-right: 15px;
+
+}
+
+.inbox-icon {
+	color: #333;
+	transition: 0.5s;
+}
+
+.inbox-icon:hover {
+	transition: 0.5s;
+}
