--- a/static/style.css
+++ b/static/style.css
@@ -107,3 +107,25 @@
 .inbox-icon:hover {
 	transition: 0.5s;
 }
+
+.empty-text {
+	color: #777;
+	font-size: 1.5rem;
+	text-align: center;
+}
+
+.sent-message {
+	background-color: #f3f3f3;
+	border-radius: 30px;
+	padding: 10px 25px;
+	width: 25%;
+}
+
+.received-message {
+	background-color: rgb(1, 196, 255);
+	color: #fff;
+	border-radius: 30px;
+	padding: 10px 25px;
+	width: 25%;
+	float: right;
+}
