--- a/landing/templates/landing/nav.html
+++ b/landing/templates/landing/nav.html
@@ -67,7 +67,7 @@
           </a>
         </div>
 
-        <div class="nav-item pd-3">
+        <div class="nav-item" style="margin-left:15px;">
           {% show_notifications %}
         {% endif %}
       </div>
