--- a/landing/templates/landing/nav.html
+++ b/landing/templates/landing/nav.html
@@ -23,7 +23,13 @@
        ><i class ="fas fa-hashtag"></i> SMedia</a>
 
       <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
-        <ul class="navbar-nav me-auto mb-2 mb-lg-0"></ul>
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <li>
+                <a class="inbox-icon" href={% url 'explore' %}>
+                  <i class="fa-regular fa-compass"></i>
+                </a> 
+            </li>
+        </ul>
         
         <form class="d-flex" method = "GET" action="{% url 'profile_search' %}">
           <div class="input-group">
