--- a/socialapp/templates/socialapp/post_detail.html
+++ b/socialapp/templates/socialapp/post_detail.html
@@ -26,8 +26,9 @@
                     <a href="{% url 'post_edit' post.pk %}" class="btn" class="edit-color"><i class="fa-regular fa-pen-to-square"></i></a>
                     <a href="{% url 'post_delete' post.pk %}" class="btn" class="edit-color"><i class="fa-solid fa-trash"></i></a>
                 {% endif %}
-
-            <p>{{ post.content }}</p>
+            <div class="body" style="text-decoration: none;">
+                <p>{{ post.content }}</p>
+            </div>
 
             <div class="d-flex flex-row">
                 <form method="POST" action="{% url 'like' post.pk %}">
