--- a/socialapp/templates/socialapp/post_list.html
+++ b/socialapp/templates/socialapp/post_list.html
@@ -38,8 +38,9 @@
                 {% if post.image %}
                     <img class="post-image" src="{{ post.image.url }}" alt="post image" />
                 {% endif %}
-                
-                <p>{{ post.content }}</p>
+                <div class="body" style="text-decoration: none;">
+                    <p>{{ post.content }}</p>
+                </div>
                 <a href="{% url 'post_detail' post.pk %}" class="stretched-link"> <a/>
             </div>
 
