--- a/static/style.css
+++ b/static/style.css
@@ -52,12 +52,14 @@
 .dropdown-content {
 	position: absolute;
 	background-color: #f1f1f1;
-	min-width: 300px;
+	max-width: 300px;
 	box-shadow: 0px 8px 8px 0px rgba(0,0,0,0.2);
 	z-index: 1;
 	font-size: 0.9rem;
 	overflow-y: auto; /* Enable vertical scrolling if needed */
     max-height: 300px; /* Set a maximum height for scrolling */
+	left: 0 !important; /* Align the dropdown to the left */
+    top: 100%; /* Move the dropdown to the left edge of its container */
 }
 
 /* Styles for notification links */
